[package]
name = "satsval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
maud = "0.26.0"
reqwest = { version = "0.11.23", features = ["json"]}
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5.1", features = ["fs"] }
