[package]
name = "satsval"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
minify-js = "0.5.0"

[dependencies]
axum = "0.7.4"
maud = "0.26.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
